--- a/src/css/style.css
+++ b/src/css/style.css
@@ -120,6 +120,12 @@ body {
 }
 
 .options {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    background-color: var(--bg-main-content);
+    border-radius: 1.2rem;
+    padding: 1.6rem;
     width: 100%;
 }
 
