--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,17 +6,33 @@
 }
 
 :root {
+    --bg-body-dark: #252525;
+    --bg-content-dark: #202020;
+    --bg-stopwatch: radial-gradient(#404040, #00000000 70%);
+    
+    --shadow-color: #202020;
+    
     --primary-color: #46FF71;
-    --white-color: #FFFFFF;
-    --grey-color: #545454;
-    --bg-body: #252525;
-    --bg-main-content: #202020;
-    --delete-color: #ff4646;
+    
+    --default-btn-color: #545454;
+    --success-color: #46FF71;
+    --danger-color: #ff4646;
+
+    --main-font: "Orbitron", sans-serif;
+    --stopwatch-font: "Orbitron", sans-serif;
+    --text-light: #FFFFFF;
+    --text-dark: #545454;
+
+    --transition-time: 0.3s;
+
+    --checkbox-button-width: 4rem;
+    --checkbox-button-height: 2rem;
+    --border-rounded: 999px;
 }
 
 ::selection {
+    color: var(--text-dark);
     background-color: var(--primary-color);
-    color: var(--grey-color);
 }
 
 html {
@@ -24,7 +40,7 @@ html {
 }
 
 body {
-    font-family: "Orbitron", sans-serif;
+    font-family: var(--main-font);
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
@@ -33,14 +49,14 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100dvh;
-    background-color: var(--bg-body);
+    background-color: var(--bg-body-dark);
 }
 
 .container {
     width: 100%;
     max-width: 450px;
     margin: 0 auto;
-    padding: 40px;
+    padding: 4rem;
 }
 
 .main {
@@ -51,10 +67,11 @@ body {
 }
 
 .stopwatch {
+    font-family: var(--stopwatch-font);
     font-size: 4.5rem;
     font-weight: bold;
-    text-shadow: 2px 2px 6px var(--bg-main-content);
-    color: var(--white-color);
+    text-shadow: 0.2rem 0.2rem 0.6rem var(--shadow-color);
+    color: var(--text-light);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -62,80 +79,82 @@ body {
     height: 35rem;
     background: radial-gradient(#404040, #00000000 70%);
     border: 1rem solid var(--primary-color);
-    box-shadow: 2px 2px 6px var(--bg-main-content);
+    box-shadow: 0.2rem 0.2rem 0.6rem var(--shadow-color);
     border-radius: 50%;
 }
 
-.input-section {
+.money-section {
     display: flex;
     gap: 1.6rem;
 }
 
-.input-section input:focus {
+.money-section input:focus {
     outline: none;
 }
 
-.input-section .input-group {
+.money-section .input-group {
     font-size: 1.6rem;
     display: flex;
     gap: 1rem;
     background-color: transparent;
     border: none;
-    border-bottom: 3px solid var(--primary-color);
+    border-bottom: 0.3rem solid var(--primary-color);
     border-radius: 0.6rem;
-    box-shadow: 2px 2px 6px var(--bg-main-content);
+    box-shadow: 0.2rem 0.2rem 0.6rem 0.2rem var(--shadow-color);
     padding: 0.4rem 0.8rem 0.4rem;
 }
 
-.input-section .input-group:has(input:focus) {
-    background-color: var(--bg-main-content);
+.money-section .input-group:has(input:focus) {
+    background-color: var(--bg-content-dark);
 }
 
-.input-section .input-group .detail {
+.currency-label {
     display: block;
     text-wrap: nowrap;
     color: var(--primary-color);
     user-select: none;
 }
 
-.input-section .input-group input {
+.money-input-initial,
+.money-input-add {
     font-family: "Orbitron", sans-serif;
     font-size: inherit;
-    color: var(--white-color);
+    color: var(--text-light);
     width: 100%;
     background-color: transparent;
     border: none;
 }
 
-.input-section .input-group .confirm, .input-section .input-group .delete {
+.btn-confirm,
+.btn-delete {
     font-size: inherit;
-    color: var(--grey-color);
+    color: var(--default-btn-color);
     background: none;
     border: none;
     cursor: pointer;
-    transition: color 0.3s;
+    transition: color var(--transition-time);
 }
 
-.input-section .input-group .confirm:hover {
-    color: var(--primary-color);
+.btn-confirm:hover {
+    color: var(--success-color);
 }
 
-.input-section .input-group .delete:hover {
-    color: var(--delete-color);
+.btn-delete:hover {
+    color: var(--danger-color);
 }
 
 .options {
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    background-color: var(--bg-main-content);
+    background-color: var(--bg-content-dark);
     border-radius: 1.2rem;
     padding: 1.6rem;
     width: 100%;
 }
 
-.options .convert-centavos {
-    color: var(--white-color);
+.option-toggle {
+    color: var(--text-light);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -145,32 +164,80 @@ body {
     display: none;
 }
 
-.options .check-container .btn-check {
+.checkbox-container .checkbox-button {
     display: flex;
     align-items: center;
-    width: 4rem;
-    height: 2rem;
-    background-color: var(--grey-color);
+    width: var(--checkbox-button-width);
+    height: var(--checkbox-button-height);
+    background-color: var(--default-btn-color);
     border: none;
-    border-radius: 1rem;
+    border-radius: var(--border-rounded);
     padding: 0.3rem;
-    transition: background-color 0.3s;
+    transition: background-color var(--transition-time);
     cursor: pointer;
 }
 
-.options .check-container .btn-check .check {
-    aspect-ratio: 1/1;
+.checkbox-container .checkbox-button .checkmark {
     height: 100%;
-    background-color: var(--bg-main-content);
+    aspect-ratio: 1/1;
+    background-color: var(--bg-content-dark);
     border-radius: 50%;
     margin-left: 0;
-    transition: margin 0.3s;
+    transition: margin var(--transition-time);
 }
 
-.options .check-container input:checked + .btn-check .check {
+.checkbox-container input:checked + .checkbox-button .checkmark {
     margin-left: calc(100% - 1.4rem);
 }
 
-.options .check-container input:checked + .btn-check {
-    background-color: var(--primary-color);
+.checkbox-container input:checked + .checkbox-button {
+    background-color: var(--success-color);
+}
+
+.tooltip {
+    cursor: pointer;
+    position: relative;
+}
+
+.tooltip::after {
+    font-family: var(--main-font);
+    font-weight: bold;
+    content: attr(data-tooltip);
+    display: none;
+    font-size: 1rem;
+    text-wrap: nowrap;
+    color: var(--text-light);
+    background-color: var(--bg-content-dark);
+    border-radius: 0.8rem;
+    padding: 1rem;
+    cursor: default;
+    position: absolute;
+    z-index: 99;
+}
+
+.tooltip::before {
+    content: '';
+    display: none;
+    border-width: 1rem;
+    border-style: solid;
+    position: absolute;
+    z-index: 99;
+}
+
+.tooltip:hover::after,
+.tooltip:hover::before {
+    display: inline-block;
+}
+
+.tooltip.top::after {
+    bottom: 125%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.tooltip.top::before {
+    bottom: 60%;
+    left: 50%;
+    transform: translateX(-50%);
+    border-color: var(--bg-content-dark) transparent transparent transparent;
 }
